# hierarchical_data

./: README.md  db.sqlite3  manage.py  pyproject.toml
dropboxesque_app/: admin.py  apps.py  forms.py  models.py  views.py
dropboxesque_app/migrations/: 0001_initial.py
dropboxesque_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: genericform.html  index.html
